--- a/WhenDidILast/package.json
+++ b/WhenDidILast/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-firebase/app": "^8.3.1",
+    "@react-native-firebase/auth": "^8.3.3",
     "react": "16.13.1",
     "react-native": "0.63.2"
   },
