--- a/WhenDidILast/android/app/build.gradle
+++ b/WhenDidILast/android/app/build.gradle
@@ -183,7 +183,7 @@ android {
 
 dependencies {
     implementation 'androidx.multidex:multidex:2.0.1' 
-
+    implementation 'com.google.firebase:firebase-analytics:17.5.0'
     implementation fileTree(dir: "libs", include: ["*.jar"])
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
