--- a/package.json
+++ b/package.json
@@ -8,10 +8,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
     "next": "10.0.7",
     "react": "17.0.1",
     "react-datepicker": "^3.6.0",
     "react-dom": "17.0.1",
     "react-icons": "^4.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.31",
+    "@types/react-datepicker": "^3.1.5",
+    "typescript": "^4.2.2"
   }
 }
